deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopware
spec:
  selector:
    app.kubernetes.io/name: shopware
  ports:
    - name: fcgi
      protocol: TCP
      port: 9000
      targetPort: 9161
